# LytSlot

./: .cursorrules  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  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  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.pub  package-lock.json  pyproject.toml  run_log.txt
.cursor/rules/: dev-process-and-docs.mdc
.github/workflows/: ci.yml  docker-build.yml
db/: __init__.py  base.py  database.py  seed.py
db/migrations/: env.py
db/models/: __init__.py  api_key.py  channel.py  order.py  payment.py  slot.py  tenant.py  view.py
docs/: Architecture-Audit.md  Architecture-Plan.md  Deploy-Clean-OS.md  Deploy-Server-From-Zero.md  Deploy-Update.md  Diary.md  Next-Security-Upgrade.md  Project.md  Push-To-GitHub.md  Tasktracker.md  Telegram-Widget-Port80.md  UX-UI-Audit.md  changelog.md  npm-network-troubleshooting.md  project.md  qa.md  tasktracker.md
infra/: Dockerfile.api  Dockerfile.bot  Dockerfile.worker  README.md  docker-compose.yml  registries.conf
infra/k8s/: api-deployment.yaml
scripts/: db-migrate-in-container.sh  db-migrate.sh  deploy-from-local.sh  deploy-update.sh  docker-up-full.sh  export-openapi.py  free-port.sh  local-preflight.sh  podman-up-db-redis.sh  podman-up.sh  run-api.sh  run-local-stop.sh  run-local.sh  run-worker.sh  seed-db.sh  server-bootstrap.sh  verify-web-calendar-fix.sh
services/api/: __init__.py  auth.py  config.py  deps.py  logging_config.py  main.py  middleware.py
services/bot/: __init__.py  api_client.py  config.py  main.py
services/web/: .prettierignore  (+10 more)
shared/: __init__.py
tests/: conftest.py  test_health.py  test_orders.py  test_rls.py
(+41 files in other folders)
